# lists-server

./: Cargo.toml
migrations/2020-11-24-121318_create_collections/: down.sql  up.sql
migrations/2020-11-25-042816_create_items/: up.sql
src/: actions.rs  db.rs  main.rs  models.rs  schema.rs
src/actions/: collection_show.rs  item_create.rs
