[package]
name = "lists-server"
version = "0.1.0"
authors = ["Hugo Peixoto <hugo.peixoto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
rand = "0.7.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
mime = "0.3.16"
bytes = "0.4.10"
futures = "0.3.5"
diesel = { version = "^1.1.0", features = ["postgres", "r2d2", "uuidv07"] }
r2d2 = "0.8"
uuid = { version = "0.7", features = ["serde", "v4"] }
